package usantatecla.mastermind.views.graphics;

import usantatecla.mastermind.controllers.Logic;
import usantatecla.mastermind.views.View;

public class GraphicsView extends View {

    public GraphicsView(Logic logic) {
        super(logic);
    }

    @Override
    public void start() {
    }

    @Override
    public void play() {
    }

    @Override
    public boolean resume() {
        return true;
    }

}
